# ofol

./: .gitignore  .luacheckrc  README.md  build-and-run.sh  meson.build  meson_options.txt
.github/: labeler.yml
.github/workflows/: auto_labeler_pr.yml  build.yml
data/: entrypoint.lua
data/colors/: default.lua
data/components/: contextmenu_component.lua  filename_component.lua  scrollbar_component.lua  settings_change_component.lua  settings_individual_option_component.lua  settings_tab_component.lua
data/configuration/: configuration_editor.lua  configuration_user_interface.lua  init.lua
data/core/: autocomplete.lua  cache.lua  command.lua  common.lua  config.lua  contextmenu.lua  dirwatch.lua  file_metadata.lua  ime.lua  init.lua  keymap.lua  logview.lua  lsp_snippets.lua  lspkind.lua  minimap.lua  node.lua  project.lua  rootview.lua  scale.lua  scrollbar.lua  settings.lua  snippets.lua  start.lua  statusview.lua  stderr.lua  strict.lua  style.lua  tokenizer.lua  user_session.lua  user_settings.lua  view.lua
data/entrypoint/: global_includes.lua
data/lib/: cache.lua  clipping.lua  fsutils.lua  global_constants.lua  global_variables.lua  json_config_file.lua  object.lua  serialize.lua  stderr.lua  threading.lua  (+3 more)
lua-plugins-old/: autoreload.lua  autosave.lua  colorpreview.lua  detectindent.lua  extend_selection_line.lua  projectsearch.lua  rainbowparen.lua
scripts/: build.sh
src/: main.c  meson.build  rencache.c  renderer.c  renderer.h  renwindow.c  renwindow.h
subprojects/: sdl3_ttf.wrap
subprojects/packagefiles/sdl3_ttf/: meson.build
(+413 files in other folders)
